[package]
name = "gpi"
version = "0.1.0"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
url = "1.7.2"
failure = "0.1.5"
serde = {version = "1.0.91", features  = ["derive"] }
serde_derive = "1.0.91"
failure_derive = "0.1.5"
serde_json = "1.0.39"
url_serde = "0.2.0"
shellfn = "0.1.1"
prettytable-rs = "0.8.0"
structopt = "0.2.15"
